--- a/HtmlTextView/build.gradle
+++ b/HtmlTextView/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation "androidx.annotation:annotation-jvm:1.8.2"
+    implementation "androidx.annotation:annotation:1.0.0"
 }
 
 
@@ -41,7 +41,7 @@ afterEvaluate{
             release(MavenPublication) {
                 groupId = 'com.koai-dev'
                 artifactId = 'html-textview'
-                version = '5.0.2'
+                version = '5.0.3'
 
                 afterEvaluate {
                     from components.release
@@ -53,7 +53,7 @@ afterEvaluate{
 
 task createReleaseTag {
     doLast {
-        def tagName = "5.0.2"
+        def tagName = "5.0.3"
         try {
             exec {
                 commandLine("git", "tag", "-a", tagName, "-m", "Release tag $tagName")
